--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,21 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 
 
 body {
   font-family: "Manrope", sans-serif;
-  padding: 32px 16px;
+  padding: 32px 0px;
   background-color: #F3D9FF;
 }
 
+@media screen and (min-width: 560px) {
+  body{
+    padding: 32px 16px;
+  }
+}
 @media screen and (min-width: 1024px) {
   body{
     padding: 32px;
